<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.elnarion.maven</groupId>
	<artifactId>elnarion-parent-pom</artifactId>
	<version>2.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>basic maven parent pom for different maven projects</description>
	<url>https://github.com/devlauer/elnarion-parent-pom</url>

	<properties>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<snapshotRepositoryId>ossrh</snapshotRepositoryId>
		<snapshotRepository>https://oss.sonatype.org/content/repositories/snapshots</snapshotRepository>
		<releaseRepositoryId>ossrh</releaseRepositoryId>
		<releaseRepository>https://oss.sonatype.org/service/local/staging/deploy/maven2/</releaseRepository>
		<asciidoctorj.version>1.6.2</asciidoctorj.version>
		<asciidoclet.version>1.5.6</asciidoclet.version>
		<jruby.version>1.7.26</jruby.version>
		<docconverter.version>0.10.0</docconverter.version>
		<uniknow.exportlet.version>0.1.14</uniknow.exportlet.version>
		<asciidoctorj.diagram.version>1.5.4.1</asciidoctorj.diagram.version>
		<elnarion.asciidoc.extension.version>0.9.2</elnarion.asciidoc.extension.version>

		<asciidoc.src.directory>${basedir}/src/main/asciidoc</asciidoc.src.directory>
		<asciidoc.temp.directory>${basedir}/target/docs/asciidoc</asciidoc.temp.directory>
		<asciidoc.package.directory>${basedir}/target/adoc-package</asciidoc.package.directory>
		<asciidoc.target.directory>${basedir}/target/docs/</asciidoc.target.directory>
	</properties>

	<issueManagement>
		<system>jira</system>
		<url>https://github.com/devlauer/elnarion-parent-pom/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<id>devlauer</id>
			<name>Lauer</name>
			<email>dev.lauer@elnarion.de</email>
			<url>https://github.com/devlauer</url>
			<timezone>+1:00</timezone>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<profiles>
		<profile>
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java-project</id>
			<activation>
				<file>
					<exists>${basedir}/src/main/java</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>${java.version}</release>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>maven-central</id>
			<activation>
				<file>
					<exists>${basedir}/.mvn/active-profiles/maven-central</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<keyname>${gpg.keyname}</keyname>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<configuration>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<useReleaseProfile>false</useReleaseProfile>
							<releaseProfiles>release</releaseProfiles>
							<goals>deploy</goals>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>asciidoc-generate</id>
			<activation>
				<file>
					<exists>${basedir}/.mvn/active-profiles/asciidoc-generate</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.asciidoctor</groupId>
						<artifactId>asciidoctor-maven-plugin</artifactId>
						<dependencies>
							<dependency>
								<groupId>org.jruby</groupId>
								<artifactId>jruby-complete</artifactId>
								<version>${jruby.version}</version>
							</dependency>
							<dependency>
								<groupId>org.asciidoctor</groupId>
								<artifactId>asciidoctorj</artifactId>
								<version>${asciidoctorj.version}</version>
							</dependency>
							<dependency>
								<groupId>de.elnarion.asciidoc</groupId>
								<artifactId>asciidoc-extension-multiinclude</artifactId>
								<version>${elnarion.asciidoc.extension.version}</version>
							</dependency>
							<dependency>
								<groupId>de.elnarion.asciidoc</groupId>
								<artifactId>asciidoc-extension-remoteplantuml</artifactId>
								<version>${elnarion.asciidoc.extension.version}</version>
							</dependency>
						</dependencies>
						<configuration>
							<sourceDirectory>${asciidoc.src.directory}</sourceDirectory>
							<outputDirectory>${asciidoc.temp.directory}</outputDirectory>
							<requires>
								<require>elnarion/multiinclude-processor</require>
							</requires>
						</configuration>
						<executions>
							<execution>
								<id>asciidoc-to-html</id>
								<phase>process-resources</phase>
								<goals>
									<goal>process-asciidoc</goal>
								</goals>
								<configuration>
									<backend>xhtml5</backend>
									<sourceHighlighter>coderay</sourceHighlighter>
									<attributes>
										<sectnums>true</sectnums>
										<linkcss>false</linkcss>
										<imagesdir>./images</imagesdir>
										<toc>left</toc>
										<icons>font</icons>
										<sectanchors>true</sectanchors>
										<idprefix />
										<idseparator>-</idseparator>
										<docinfo1>true</docinfo1>
									</attributes>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>docconverter-maven-plugin</artifactId>
						<groupId>de.elnarion.maven</groupId>
						<executions>
							<execution>
								<id>html2pdf</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>convert</goal>
								</goals>
								<configuration>
									<outputDirectory>${asciidoc.target.directory}</outputDirectory>
									<sourceDirectory>${asciidoc.temp.directory}</sourceDirectory>
									<sourceMimeType>application/xhtml+xml</sourceMimeType>
									<targetMimeType>application/pdf</targetMimeType>
									<outputFileending>pdf</outputFileending>
									<sourceDocumentExtensions>html</sourceDocumentExtensions>
								</configuration>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>de.elnarion.util</groupId>
								<artifactId>docconverter-html2pdf</artifactId>
								<version>${docconverter.version}</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>asciidoc-packaging</id>
			<activation>
				<file>
					<exists>${basedir}/.mvn/active-profiles/asciidoc-packaging</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>docconverter-maven-plugin</artifactId>
						<groupId>de.elnarion.maven</groupId>
						<executions>
							<execution>
								<id>adoc2adoc</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>convert</goal>
								</goals>
								<configuration>
									<outputDirectory>${asciidoc.package.directory}</outputDirectory>
									<sourceDirectory>${asciidoc.src.directory}</sourceDirectory>
									<sourceMimeType>text/x.asciidoc</sourceMimeType>
									<targetMimeType>text/x.asciidoc</targetMimeType>
									<outputFileending>adoc</outputFileending>
									<sourceDocumentExtensions>adoc</sourceDocumentExtensions>
									<conversionParameters>
										<adoc2adoc.remain_include_statement_regexp>.*include\:\:\.\/.*\[\].*</adoc2adoc.remain_include_statement_regexp>
									</conversionParameters>
								</configuration>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>de.elnarion.util</groupId>
								<artifactId>docconverter-adoc2adoc</artifactId>
								<version>${docconverter.version}</version>
							</dependency>
						</dependencies>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<executions>
							<execution>
								<id>asciidoc-jar</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<classifier>asciidoc</classifier>
									<classesDirectory>
										${asciidoc.package.directory}
									</classesDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>asciidoc-unpackage</id>
			<activation>
				<file>
					<exists>${basedir}/.mvn/active-profiles/asciidoc-unpackage</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>unpack-dependencies</goal>
								</goals>
								<configuration>
									<includeClassifiers>asciidoc</includeClassifiers>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>javadoc-from-asciidoc</id>
			<activation>
				<file>
					<exists>${basedir}/.mvn/active-profiles/javadoc-from-asciidoc</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<!-- Exports javadocs containing AsciiDoc to HTML -->
							<execution>
								<id>html</id>
								<phase>package</phase>
								<goals>
									<goal>javadoc</goal>
								</goals>
								<configuration>
									<source>1.7</source>
									<doclet>org.asciidoctor.Asciidoclet</doclet>
									<docletArtifact>
										<groupId>org.asciidoctor</groupId>
										<artifactId>asciidoclet</artifactId>
										<version>${asciidoclet.version}</version>
									</docletArtifact>
									<overview>${project.build.sourceDirectory}/overview.adoc</overview>
									<additionalparam>
										--base-dir ${project.basedir}
										--attribute
										"name=${project.name}"
										--attribute "version=${project.version}"
										--attribute
										"title-link=https://www.github.com/devlauer/[${project.name}]"
									</additionalparam>
								</configuration>
							</execution>
							<!-- Exports javadocs containing AsciiDoc to AsciiDoc files -->
							<execution>
								<id>asciidoc</id>
								<phase>package</phase>
								<goals>
									<goal>javadoc</goal>
								</goals>
								<configuration>
									<doclet>org.uniknow.asciidoc.ExportDoclet</doclet>
									<docletArtifact>
										<groupId>org.uniknow.asciidoc</groupId>
										<artifactId>exportdoclet</artifactId>
										<version>${uniknow.exportlet.version}</version>
									</docletArtifact>
									<useStandardDocletOptions>true</useStandardDocletOptions>
									<destDir>javadoc</destDir>
									<reportOutputDirectory>${asciidoc.package.directory}</reportOutputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.0</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=warn
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=warn
					</argLine>
				</configuration>
			</plugin>			
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0-M3</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.14.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.12.1</version>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.8</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>3.0.0-M7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.7.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-invoker-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.6</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.4.1</version>
				</plugin>
				<plugin>
					<groupId>org.asciidoctor</groupId>
					<artifactId>asciidoctor-maven-plugin</artifactId>
					<version>1.6.0</version>
				</plugin>
				<plugin>
					<groupId>de.elnarion.maven</groupId>
					<artifactId>docconverter-maven-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<scm>
		<connection>scm:git:ssh://git@github.com/devlauer/elnarion-parent-pom.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/devlauer/elnarion-parent-pom.git</developerConnection>
		<url>https://github.com/devlauer/elnarion-parent-pom/tree/master</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>${snapshotRepositoryId}</id>
			<url>${snapshotRepository}</url>
		</snapshotRepository>
		<repository>
			<id>${releaseRepositoryId}</id>
			<url>${releaseRepository}</url>
		</repository>
	</distributionManagement>

</project>